<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtPhoneAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/phone_number_auth"
        android:textColor="#18206F"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:paddingVertical="7dp"
        android:paddingStart="15dp"
        android:layout_marginHorizontal="50dp"
        android:maxLength="13"
        android:hint="@string/enter_phone_number"
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/sendOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/send_otp" />

    <EditText
        android:id="@+id/otpEditText"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/edittext_bg"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_otp" />

    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:text="@string/verify_otp" />
</LinearLayout>
