<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#18206F"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSignUpEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="7dp"
            android:paddingStart="15dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingVertical="7dp"
            android:paddingStart="15dp"
            android:textColorHint="#757575" />


        <EditText
            android:id="@+id/etSignUpConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingVertical="7dp"
            android:paddingStart="15dp"
            android:textColorHint="#757575"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/tvRedirectLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/already_have_account_log_in"
            android:textColor="#18206F"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPhoneSignUP"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/phone_logo" />

            <ImageView
                android:id="@+id/imgGoogleSignUP"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/google_logo" />

            <ImageView
                android:id="@+id/imgFbSignUP"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/facebook_logo" />

            <ImageView
                android:id="@+id/imgGuestSignUP"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:src="@drawable/guest_logo" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
